FIX: platform no longer covers part of the title

--- a/hand_a_game/main/static/main/styles.css
+++ b/hand_a_game/main/static/main/styles.css
@@ -551,7 +551,7 @@ input:focus{
 
 .result-item{
     background-repeat: no-repeat;
-    background-position: center;
+    background-position: center 20px;
     background-size: cover;
     width: 200px;
     height: 250px;
